[gd_scene load_steps=4 format=3 uid="uid://cssawlcgy87g8"]

[ext_resource type="Script" uid="uid://lqd5kigr2ceg" path="res://gui/player_hud/player_hud.gd" id="1_shp8k"]
[ext_resource type="Texture2D" uid="uid://duxpc005b44ye" path="res://gui/player_hud/gui-health.png" id="2_w1ao3"]
[ext_resource type="PackedScene" uid="uid://dsq8xil82iriw" path="res://gui/player_hud/heart_gui.tscn" id="3_rmetd"]

[node name="PlayerHud" type="CanvasLayer"]
layer = 2
follow_viewport_enabled = true
script = ExtResource("1_shp8k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(320, 6)
texture = ExtResource("2_w1ao3")
region_enabled = true
region_rect = Rect2(29, 0, 34, 8)

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 255.0
offset_top = 10.0
offset_right = 385.0
offset_bottom = 50.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("3_rmetd")]
layout_mode = 2

[node name="SpeechChallengeLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LiveTranscriptLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ChallengeFeedbackLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
